--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,17 @@
   {%- assign page_title = page.title | default: site_title -%}
   <title>{{ page_title }}</title>
 
+  <meta property="og:title" content="{{ page.title | default: site.title }}">
+<meta property="og:description" content="{{ page.description | default: site.description }}">
+
+{% assign og_image = page.image | default: site.og_image %}
+{% if og_image %}
+  <meta property="og:image" content="{{ og_image | absolute_url }}">
+{% endif %}
+
+<meta property="og:url" content="{{ page.url | absolute_url }}">
+<meta property="og:type" content="website">
+
   {%- comment -%}
     DESCRIPTION:
     - page.description (na konkrétní stránce)
